src/pages/FindAStation/components/Filters/ServicesDropdown/ServicesDropdown.module.css
/* Wraps Entire Component */
.servicesDropdown {
  display: flex;
}

/* The "Filter by services" title */
.title {
  padding-top: 0.5rem;
  margin-right: 1rem;
  font-weight: bold;
}

/* Wraps input container, drop down and key service ovals*/
.flexColumnWrapper {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 40vw;
  min-width: 400px;
}

/* Wraps input box */
.inputContainer {
  cursor: pointer;
}

/* Input box  */
.dropdownInput {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  min-height: 56px; /* This is the height when bubbles are added so set as minimum to avoid jumping and so the arrow and x looks better*/
  padding: 0.5rem 1rem;
  border: 1px var(--color-light-grey) solid;
  border-radius: var(--b-radius-container);
  line-height: 1.5;
  transition: border-color 0.3s ease;
}

.dropdownInput:hover,
.dropdownInput.dropdownOpen {
  border: 2px var(--color-orange) solid;
}

/* Smaller box inside the input box that holds the selected oval shapes */
.selectedServices {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.placeholder {
  color: var(--color-grey);
  align-self: center;
}

/* Ovals inside the input box */
.selectedService {
  padding: 0.5rem 0.75rem;
  border-radius: var(--b-radius-button);
  box-shadow: var(--shadow-button);
  background-color: var(--color-purple);
  color: var(--color-light);
  font-weight: bold;
}

/* The x that appears inside the oval selectedService*/
.removeServiceX {
  margin-left: 0.5rem;
  color: var(--color-light);
}

.xAndArrowContainer {
  display: flex;
  align-items: flex-start;
  gap: 0.5rem;
  margin-left: 0.5rem;
}

/* The x that appears in the input box when something is selected  which clears all selected services */
.removeAllServicesX {
  position: relative;
  width: var(--fs-desktop);
  height: var(--fs-desktop);
  margin-top: 12px;
  color: var(--color-purple);
}

.removeAllServicesX::before,
.removeAllServicesX::after {
  content: "";
  position: absolute;
  width: 2px;
  height: var(--fs-desktop);
  background-color: var(--color-purple);
}

.removeAllServicesX::before {
  transform: rotate(45deg);
}

.removeAllServicesX::after {
  transform: rotate(-45deg);
}

.divider {
  height: 100%;
  margin-right: 0.3rem;
  border-left: 1px var(--color-light-grey) solid;
  color: var(--color-light-grey);
}

/* Arrow that appears inside the input box after the selectedServices container 
    and inside the dropdownMenu
*/
.dropdownArrow {
  margin-top: 10px;
  width: 12px;
  height: 12px;
  border: var(--color-dark) solid;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);
}

.arrowUp {
  border-width: 2px 0px 0px 2px;
}

.dropdownMenu {
  position: absolute;
  top: 100%;
  z-index: 1000;
  width: 100%;
  border: 2px var(--color-orange) solid;
  border-radius: var(--b-radius-container);
  overflow: hidden;
  background-color: var(--color-light);
  list-style: none;
}

.dropdownMenu label,
input,
span {
  cursor: pointer;
}

.serviceItem {
  padding-block: 1rem;
  padding-inline: 1rem;
  border-bottom: 1px var(--color-light-grey) solid;
}

.serviceItem:hover,
.serviceItem.selected {
  background-color: var(--color-orange);
}

.serviceItem.heading {
  padding-left: calc(
    var(--checkbox-size) + var(--checkbox-label-gap) + 1rem
  ); /* Adds padding to the left of the element, making space for the custom checkbox */
}

.serviceItem.heading.nestedOpen {
  background-color: var(--color-purple);
  color: var(--color-light);
}

.serviceItem label {
  display: block; /* Label a block element so user can click anywhere on width of list to toggle checkbox */
}

.nestedServiceTitle {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nestedServiceTitle .dropdownArrow {
  /* border: var(--color-light) solid; */
}

/* This is the label that wraps around the input & text */
.customCheckbox {
  position: relative;
  display: inline-flex;
  align-items: center; /* Vertically centers the checkbox and label - they are flex items/children */
  padding-left: calc(
    var(--checkbox-size) + var(--checkbox-label-gap)
  ); /* Adds padding to the left of the element, making space for the custom checkbox */
  line-height: var(--checkbox-size); /* Text height to match checkbox height */
  cursor: pointer;
}

/* Hides the actual input */
.customCheckbox input {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

/* This is the checkbox */
.customCheckbox .checkbox {
  position: absolute;
  top: 50%;
  transform: translateY(
    -50%
  ); /* Offsets the element vertically by 50% of its own height, effectively centering it vertically */
  left: 0;
  width: var(--checkbox-size);
  height: var(--checkbox-size);
  border: 1px var(--color-light-grey) solid;
  border-radius: var(--b-radius-checkbox);
  background-color: var(--color-light);
}

/* This is the tick in the checkbox */
.customCheckbox .checkbox:after {
  content: "";
  position: absolute;
  top: calc(var(--checkbox-size) / 8);
  left: calc(var(--checkbox-size) / 4);
  display: none;
  width: calc(var(--checkbox-size) / 2.75);
  height: calc(var(--checkbox-size) / 1.75);
  border: var(--color-purple) solid;
  border-width: 0 3px 3px 0;
  transform: rotate(45deg);
}

.customCheckbox input:checked + .checkbox:after {
  /* Tick displays when input checked */
  display: block;
}

.infoIconContainer {
  position: relative;
}

.infoIcon {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: var(--fs-desktop);
  height: var(--fs-desktop);
  margin-left: 0.25rem;
  border: 1px solid #1355ff;
  border-radius: 50%;
  background-color: var(--color-light-grey);
  color: #1355ff;
  font-size: calc(var(--fs-desktop) * 0.5);
}

.iconText {
  font-weight: bold;
}

.tooltip {
  position: absolute;
  top: -90%;
  left: calc(100% + 24px);
  z-index: 1100;
  min-width: 150px;
  padding: 0.5rem;
  box-shadow: (--shadow-button);
  background-color: var(--color-light-grey);
  font-size: 10px;
  line-height: normal;
}

.applyFiltersButton {
  align-self: flex-start;
  padding: 0.5rem 1rem;
  margin-top: 10px;
  margin-left: 1rem;
  border-radius: var(--b-radius-button);
  background: linear-gradient(90deg, var(--color-purple) 0%, #2b2d9e 100%);
  box-shadow: var(--shadow-button);
  color: var(--color-light);
  font-weight: bold;
}

.ovalButtons {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  gap: 0.5rem;
  margin-block: 0.5rem;
}

.ovalButton {
  padding: 0.5rem 0.75rem;
  border: 1px solid var(--color-orange);
  border-radius: var(--b-radius-button);
  box-shadow: var(--shadow-button);
  color: var(--color-purple);
  font-size: var(--fs-mobile);
  font-weight: bold;
  cursor: pointer;
}

.ovalButton.selected {
  background-color: var(--color-purple);
  color: var(--color-light);
}

.hidden {
  display: none;
}

@media (width < 600px) {
  .servicesDropdown {
    flex-direction: column;
  }

  .title {
    padding: 0px;
    margin: 0px;
    margin-bottom: 10px;
    font-size: var(--fs-desktop);
  }

  .flexColumnWrapper {
    width: 100%;
    min-width: unset;
  }

  .selectedServices {
    display: flex;
    flex-wrap: wrap;
    gap: 0.3rem;
  }

  .selectedService,
  .ovalButton {
    font-size: 12px;
    font-weight: normal;
  }

  .applyFiltersButton {
    margin: 2rem 0 1rem 0;
  }
}

